<?xml version="1.0"?>
<package format="3">
  <name>control_msgs</name>
  <version>0.0.1</version>
  <description>Stub of control_msgs to satisfy workspace dependencies.</description>
  <maintainer email="team@example.com">RCAN Team</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
