<?xml version="1.0"?>
<package format="3">
  <name>crane_builder</name>
  <version>0.1.0</version>
  <description>Panel chain executor for a crane using IFC GUID-based sequencing.</description>
  <maintainer email="example@example.com">Example Maintainer</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>crane_interfaces</depend>
  <exec_depend>python3-neo4j</exec_depend>

  <test_depend>ament_cmake_pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
