<?xml version="1.0"?>
<package format="3">
  <name>crane_interfaces</name>
  <version>0.1.0</version>
  <description>Interfaces for controlling a panel-handling crane using IFC-derived data.</description>
  <maintainer email="example@example.com">Example Maintainer</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
