<?xml version="1.0"?>
<package format="3">
  <name>rcan_bringup</name>
  <version>0.0.1</version>
  <description>Launch files for RCAN executor and panel publishers.</description>
  <maintainer email="maintainer@example.com">Crane Panel Builder</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>crane_builder</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rcan_executor</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
