<?xml version="1.0"?>
<package format="3">
  <name>rcan_executor</name>
  <version>0.1.0</version>
  <description>RCAN task executor that sequences crane operations from panel tasks.</description>
  <maintainer email="example@example.com">Example Maintainer</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>crane_interfaces</depend>

  <test_depend>ament_cmake_pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
