<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rcan_executor</name>
  <version>0.1.0</version>
  <description>Initial RCAN executor node that reports incoming panel tasks.</description>
  <maintainer email="example@example.com">OpenAI</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>crane_interfaces</depend>
  <depend>rclpy</depend>

  <test_depend>ament_cmake_pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
