<?xml version="1.0"?>
<package format="3">
  <name>ros_gz_interfaces</name>
  <version>0.0.0</version>
  <description>Stub package providing ament metadata for ros_gz_interfaces.</description>
  <maintainer email="support@example.com">Generated Stub</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
</package>
